--- a/gamewindow.ui
+++ b/gamewindow.ui
@@ -58,11 +58,7 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="sizeButton">
-         <property name="text">
-          <string>Size</string>
-         </property>
-        </widget>
+        <widget class="QComboBox" name="sizeComboBox"/>
        </item>
       </layout>
      </item>
